Account - เพิ่มฟอร์ม frmAC_BankRate

--- a/TUW_System.AC/TUW_System.AC.csproj
+++ b/TUW_System.AC/TUW_System.AC.csproj
@@ -59,6 +59,12 @@
     <Compile Include="frmAC_BankContact.Designer.cs">
       <DependentUpon>frmAC_BankContact.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAC_BankRate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAC_BankRate.Designer.cs">
+      <DependentUpon>frmAC_BankRate.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAC_Cust.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmAC_BankContact.resx">
       <DependentUpon>frmAC_BankContact.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAC_BankRate.resx">
+      <DependentUpon>frmAC_BankRate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAC_Cust.resx">
       <DependentUpon>frmAC_Cust.cs</DependentUpon>
