--- a/TUW_System.AC/TUW_System.AC.csproj
+++ b/TUW_System.AC/TUW_System.AC.csproj
@@ -101,6 +101,12 @@
     <Compile Include="frmAC_Rate.Designer.cs">
       <DependentUpon>frmAC_Rate.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAC_UpdateData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAC_UpdateData.Designer.cs">
+      <DependentUpon>frmAC_UpdateData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAC_Rate.resx">
       <DependentUpon>frmAC_Rate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAC_UpdateData.resx">
+      <DependentUpon>frmAC_UpdateData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Resource1.resx">
