--- a/TUW System/TUW System.csproj
+++ b/TUW System/TUW System.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Module.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Report\Account\AccountSales2.cs">
+    <Compile Include="Report\AC\AccountSales2.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AccountSales2.rpt</DependentUpon>
@@ -491,7 +491,7 @@
       <LastGenOutput>XSLIP-Riki.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="Report\Account\AccountSales2.rpt">
+    <EmbeddedResource Include="Report\AC\AccountSales2.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>AccountSales2.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
