Account - เพิ่มฟอร์ม frmAC_DomesticList

--- a/TUW_System.AC/TUW_System.AC.csproj
+++ b/TUW_System.AC/TUW_System.AC.csproj
@@ -89,6 +89,12 @@
     <Compile Include="frmAC_Domestic.Designer.cs">
       <DependentUpon>frmAC_Domestic.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAC_DomesticList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAC_DomesticList.Designer.cs">
+      <DependentUpon>frmAC_DomesticList.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAC_Draft.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAC_Domestic.resx">
       <DependentUpon>frmAC_Domestic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAC_DomesticList.resx">
+      <DependentUpon>frmAC_DomesticList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAC_DraftTT.resx">
       <DependentUpon>frmAC_DraftTT.cs</DependentUpon>
