--- a/TUW_System.TS1/TUW_System.TS1.csproj
+++ b/TUW_System.TS1/TUW_System.TS1.csproj
@@ -62,8 +62,12 @@
     <Compile Include="frmTS1_Declare.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTS1_Declare.designer.cs">
-      <DependentUpon>frmTS1_Declare.cs</DependentUpon>
+    <Compile Include="frmTS1_Declare.designer.cs" />
+    <Compile Include="frmTS1_Declare40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_Declare40.designer.cs">
+      <DependentUpon>frmTS1_Declare40.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTS1_EditTPiCSCode.cs">
       <SubType>Form</SubType>
@@ -145,8 +149,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="frmTS1_Declare.resx">
-      <DependentUpon>frmTS1_Declare.cs</DependentUpon>
+    <EmbeddedResource Include="frmTS1_Declare.resx" />
+    <EmbeddedResource Include="frmTS1_Declare40.resx">
+      <DependentUpon>frmTS1_Declare40.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_EditTPiCSCode.resx">
       <DependentUpon>frmTS1_EditTPiCSCode.cs</DependentUpon>
