--- a/TUW_System.TS1/TUW_System.TS1.csproj
+++ b/TUW_System.TS1/TUW_System.TS1.csproj
@@ -59,10 +59,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmTS1_CalSeiban.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_CalSeiban.Designer.cs">
+      <DependentUpon>frmTS1_CalSeiban.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTS1_Declare.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTS1_Declare.designer.cs" />
+    <Compile Include="frmTS1_Declare.designer.cs">
+      <DependentUpon>frmTS1_Declare.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTS1_Declare40.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +106,12 @@
     </Compile>
     <Compile Include="frmTS1_MaterialConsumption.designer.cs">
       <DependentUpon>frmTS1_MaterialConsumption.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTS1_MaterialConsumption40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_MaterialConsumption40.designer.cs">
+      <DependentUpon>frmTS1_MaterialConsumption40.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTS1_Purchase.cs">
       <SubType>Form</SubType>
@@ -135,6 +149,12 @@
     <Compile Include="frmTS1_TPiCSContract.designer.cs">
       <DependentUpon>frmTS1_TPiCSContract.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTS1_TPiCSContract40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_TPiCSContract40.designer.cs">
+      <DependentUpon>frmTS1_TPiCSContract40.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTS1_WorkOrder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,7 +169,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="frmTS1_Declare.resx" />
+    <EmbeddedResource Include="frmTS1_CalSeiban.resx">
+      <DependentUpon>frmTS1_CalSeiban.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_Declare.resx">
+      <DependentUpon>frmTS1_Declare.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_Declare40.resx">
       <DependentUpon>frmTS1_Declare40.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +193,9 @@
     <EmbeddedResource Include="frmTS1_MaterialConsumption.resx">
       <DependentUpon>frmTS1_MaterialConsumption.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_MaterialConsumption40.resx">
+      <DependentUpon>frmTS1_MaterialConsumption40.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_Purchase.resx">
       <DependentUpon>frmTS1_Purchase.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_TPiCSContract.resx">
       <DependentUpon>frmTS1_TPiCSContract.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_TPiCSContract40.resx">
+      <DependentUpon>frmTS1_TPiCSContract40.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_WorkOrder.resx">
       <DependentUpon>frmTS1_WorkOrder.cs</DependentUpon>
